--- a/css/css/style.css
+++ b/css/css/style.css
@@ -1,17 +1,112 @@
 @charset "utf-8";
 
-*{margin:0;padding:0;list-style:none;}
-body{font-size:12px;text-align:left;}
-a{text-decoration:none;color:#333;}
-a:hover{text-decoration:none;}
+* {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+body {
+    font-size: 12px;
+    text-align: left;
+}
+
+a {
+    text-decoration: none;
+    color: #333;
+}
+
+a:hover {
+    text-decoration: none;
+}
 
 
 /* left_nav */
-.left_nav{width:120px;padding:5px 0px 5px 5px;background:#fff;border:1px solid #CDCDCD;border-right:none;margin:40px auto 0 auto;}
-.left_nav dl dt{width:85px;height:22px;line-height:22px;background:url(../images/long.png) no-repeat 12px center #E6238F;padding-left:35px;color:#fff;margin-bottom:4px;}
-.left_nav dl dd{height:30px;position:relative;}
-.left_nav dl dd .nav_right{width:300px;height:auto;overflow:hidden;position:absolute;left:120px;top:0px;padding:0px 5px 10px 5px;background:#fff;display:none;border:1px solid #ccc;}
-.left_nav dl dd .nav_right a{width:110px;height:20px;line-height:20px;text-align:left;color:#666;padding-left:40px;background:url(../images/nav_right_bg.png) no-repeat 20px center;display:block;float:left;margin-top:10px;white-space:nowrap;text-overflow:ellipsis;-o-text-overflow:ellipsis;overflow: hidden;}
-.left_nav dl dd .nav_right a:hover{width:110px;height:20px;line-height:20px;text-align:left;color:#fff;padding-left:40px;background:url(../images/nav_right_bg2.png) no-repeat 20px center #E6238F;text-decoration:none;}
-.left_nav dl dd a.nav_left{height:29px;line-height:29px;background:url(../images/left_nav_dt_bg.png) no-repeat 105px center #E0E0E0;padding-left:13px;display:block;border-bottom:1px solid #fff;color:#3C4347;white-space:nowrap;text-overflow:ellipsis;-o-text-overflow:ellipsis;overflow: hidden;}
-.left_nav dl dd a.nav_left:hover{background:url(../images/left_nav_dt_bg2.png) no-repeat 105px center #E6238F;color:#fff;text-decoration:none;}
+.left_nav {
+    width: 120px;
+    padding: 5px 0px 5px 5px;
+    background: #fff;
+    border: 2px solid #cbc4ff;
+    border-right: none;
+    margin: 40px auto 0 auto;
+}
+
+.left_nav dl dt {
+    width: 85px;
+    height: 50px;
+    line-height: 50px;
+    background: url(../../../images/long.png) no-repeat 12px center rgb(181,214,90);
+    padding-left: 35px;
+    color: #fff;
+    margin-bottom: 4px;
+    font-size: 20px;
+}
+
+.left_nav dl dd {
+    height: 55px;
+    position: relative;
+}
+
+.left_nav dl dd .nav_right {
+    width: 300px;
+    height: auto;
+    overflow: hidden;
+    position: absolute;
+    left: 120px;
+    top: 0;
+    padding: 0 5px 10px 5px;
+    background: rgb(181,214,90);
+    display: none;
+    border: 2px solid #78ffae;
+    border-radius: 8px;
+}
+
+.left_nav dl dd .nav_right a {
+    width: 110px;
+    height: 20px;
+    color: #fff;
+    font-size: 16px;
+    line-height: 20px;
+    text-align: left;
+    padding-left: 40px;
+    background: url(../../../images/nav_right_bg.png) no-repeat 20px center;
+    display: block;
+    float: left;
+    margin-top: 10px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    -o-text-overflow: ellipsis;
+    overflow: hidden;
+}
+
+.left_nav dl dd .nav_right a:hover {
+    width: 110px;
+    height: 20px;
+    line-height: 20px;
+    text-align: left;
+    color: #fff;
+    padding-left: 40px;
+    background: url(../../../images/nav_right_bg2.png) no-repeat 20px center rgb(138,200,11);
+    text-decoration: none;
+}
+
+.left_nav dl dd a.nav_left {
+    height: 55px;
+    line-height: 55px;
+    background: url(../../../images/left_nav_dt_bg.png) no-repeat 105px center rgb(138,36,16);
+    padding-left: 13px;
+    display: block;
+    border-bottom: 1px solid #fff;
+    color: rgb(249,243,229);
+    font-size: 18px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    -o-text-overflow: ellipsis;
+    overflow: hidden;
+}
+
+.left_nav dl dd a.nav_left:hover {
+    background: url(../../../images/left_nav_dt_bg2.png) no-repeat 105px center rgb(82, 160, 227);
+    color: #fff;
+    text-decoration: none;
+}
